# cpp-lucerne-modern-cmake

./: README.md
src/: CMakeLists.txt
src/cmake/: FindCatch.cmake
src/decoder/: CMakeLists.txt
src/validator/: CMakeLists.txt
src/validator/tests/: CMakeLists.txt
